--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 	id 'java'
 	id 'jacoco'
+	id "org.sonarqube" version "3.4.0.2513"
 }
 
 group = 'dev.cleysonph'
@@ -55,4 +56,10 @@ jacocoTestReport {
             ])
         }))
 	}
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "CleysonPH_spring-book-tracker"
+  }
 }
