--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ language: java
 jdk: openjdk17
 install: true
 script:
-  - ./gradlew sonarqube
+  - ./gradlew sonarqube --scan -s
 addons:
   sonarcloud:
     organization: $SONAR_ORG
     token: $SONAR_TOKEN
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
