config --scan on build

--- a/build.gradle
+++ b/build.gradle
@@ -63,3 +63,10 @@ sonarqube {
     property "sonar.projectKey", "CleysonPH_spring-book-tracker"
   }
 }
+
+if (hasProperty('buildScan')) {
+	buildScan {
+		termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+		termsOfServiceAgree = 'yes'
+	}
+}
