--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: java
 jdk: openjdk17
 install: true
 script:
-  - ./gradlew sonarqube --scan -s
+  - ./gradlew build jacocoTestReport sonarqube
 addons:
   sonarcloud:
     organization: $SONAR_ORG
