--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ jacocoTestReport {
                 "**/models/**",
                 "**/repositories/**",
                 "**/dtos/**",
+				"**/config/**",
+				"**/exceptions/**",
 				"**/BookTrackerApplication.**"
             ])
         }))
